// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AddonSettings > Empty State > should match snapshot for empty state 1`] = `
<div>
  <div
    class="max-w-5xl mx-auto space-y-8 animate-in fade-in duration-500"
  >
    <div
      class="flex flex-col gap-1"
    >
      <h3
        class="text-xl font-semibold tracking-tight"
      >
        runtimeEnvironment
      </h3>
      <p
        class="text-sm text-muted-foreground max-w-2xl"
      >
        addonManagementDescription
      </p>
    </div>
    <div
      class="grid grid-cols-1 md:grid-cols-2 gap-6"
    />
  </div>
</div>
`;

exports[`AddonSettings > Loaded State > should match snapshot for loaded state 1`] = `
<div>
  <div
    class="max-w-5xl mx-auto space-y-8 animate-in fade-in duration-500"
  >
    <div
      class="flex flex-col gap-1"
    >
      <h3
        class="text-xl font-semibold tracking-tight"
      >
        runtimeEnvironment
      </h3>
      <p
        class="text-sm text-muted-foreground max-w-2xl"
      >
        addonManagementDescription
      </p>
    </div>
    <div
      class="grid grid-cols-1 md:grid-cols-2 gap-6"
    >
      <div
        class="group relative flex flex-col rounded-xl border bg-card p-6 hover:shadow-md transition-all duration-300 border-border/60"
      >
        <div
          class="flex items-start justify-between mb-6"
        >
          <div
            class="flex items-center gap-4"
          >
            <div
              class="size-12 rounded-xl flex items-center justify-center border group-hover:scale-110 transition-transform duration-300 bg-brand-python/10 border-brand-python/20"
            >
              <svg
                class="size-6 text-brand-python"
                fill="currentColor"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14.25.556a3.522 3.522 0 00-1.071.108c-1.134.331-1.78.966-1.841 2.585l-.01 1.253h5.72V5.41h-8.08c-2.458 0-4.04 1.354-4.385 3.332-.387 2.227.18 3.55 1.517 4.095 1.05.428 1.487.322 2.227.322h1.258v-1.761H6.42a1.442 1.442 0 01-1.396-1.545c0-1.033.72-1.545 2.126-1.545h6.666c1.284 0 2.227.81 2.227 2.054v4.542c0 1.244-.81 2.221-2.054 2.22h-6.703c-2.083 0-3.328-1.244-3.328-3.328v-1.258H.24c0 2.458 1.354 4.04 3.332 4.385 2.227.387 3.55-.18 4.095-1.517.428-1.05.322-1.487.322-2.227v-1.258h1.761v3.136c0 1.284.81 2.227 2.054 2.227h6.666c1.406 0 2.126.512 2.126 1.545 0 1.033-.72 1.545-2.126 1.545H8.77l.001 1.258c0 1.244.81 2.221 2.054 2.22h6.703c2.083 0 3.328-1.244 3.328-3.328v-4.542c0-2.084-1.245-3.328-3.328-3.328H11.53l.01-1.253c.061-1.619.707-2.254 1.841-2.585a3.522 3.522 0 011.071-.108c1.354 0 2.585.512 2.585 1.841v1.253h1.258c2.458 0 4.04-1.354 4.385-3.332.387-2.227-.18-3.55-1.517-4.095-1.05-.428-1.487-.322-2.227-.322H14.25zM9.11 3.235a1.144 1.144 0 011.143 1.143 1.144 1.144 0 01-1.143 1.143 1.144 1.144 0 01-1.143-1.143 1.144 1.144 0 011.143-1.143zm5.78 15.132a1.144 1.144 0 011.143 1.143 1.144 1.144 0 01-1.143 1.143 1.144 1.144 0 01-1.143-1.143 1.144 1.144 0 011.143-1.143z"
                />
              </svg>
            </div>
            <div>
              <span
                class="font-semibold text-base flex items-center gap-2"
              >
                Python
                <span
                  class="text-[10px] font-normal text-muted-foreground opacity-70"
                >
                  (uv 
                  0.1.0
                  )
                </span>
              </span>
              <p
                class="text-xs text-muted-foreground font-mono"
              >
                v
                3.12.0
              </p>
            </div>
          </div>
          <div
            class="inline-flex items-center gap-1.5 rounded-full px-3 py-1 text-xs font-semibold border transition-all duration-300 bg-success/10 text-success border-success/20"
          >
            <div
              data-testid="check-circle-icon"
            />
            <span>
              installed
            </span>
          </div>
        </div>
        <div
          class="space-y-4 mb-6 flex-1"
        >
          <p
            class="text-sm text-muted-foreground leading-relaxed"
          >
            pythonRuntimeDescription
          </p>
          <div
            class="flex items-center gap-2 p-2 rounded-lg bg-muted/50 border border-border/40 overflow-hidden"
          >
            <div
              data-testid="info-icon"
            />
            <span
              class="text-[10px] font-mono text-muted-foreground"
              title="/usr/local/bin/python3.12"
            >
              /usr/local/bin/python3.12
            </span>
          </div>
        </div>
        <div
          class="mt-auto space-y-3"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-normal cursor-pointer disabled:pointer-events-none disabled:opacity-50 disabled:cursor-not-allowed [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/20 focus-visible:ring-[2px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive px-4 py-2 has-[>svg]:px-3 w-full h-11 transition-all duration-300 bg-muted hover:bg-muted/80 text-foreground"
            data-size="default"
            data-slot="button"
            data-variant="default"
          >
            <div
              data-testid="refresh-icon"
            />
            reinstall
          </button>
          <button
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-normal transition-all cursor-pointer disabled:pointer-events-none disabled:opacity-50 disabled:cursor-not-allowed [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/20 focus-visible:ring-[2px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:hover:bg-accent/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 w-full text-destructive hover:bg-destructive/10 hover:text-destructive"
            data-size="sm"
            data-slot="button"
            data-variant="ghost"
          >
            <div
              data-testid="trash-icon"
            />
            uninstall
          </button>
          0
        </div>
      </div>
      <div
        class="group relative flex flex-col rounded-xl border bg-card p-6 hover:shadow-md transition-all duration-300 border-border/60"
      >
        <div
          class="flex items-start justify-between mb-6"
        >
          <div
            class="flex items-center gap-4"
          >
            <div
              class="size-12 rounded-xl flex items-center justify-center border group-hover:scale-110 transition-transform duration-300 bg-brand-node/10 border-brand-node/20"
            >
              <svg
                class="size-6 text-brand-node"
                fill="currentColor"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 0L2.14 5.71v12.58L12 24l9.86-5.71V5.71L12 0zm7.1 17.14l-7.1 4.1-7.1-4.1V6.86l7.1-4.1 7.1 4.1v10.28zM12 5.14L5.7 8.8v6.4l6.3 3.66 6.3-3.66V8.8L12 5.14z"
                />
              </svg>
            </div>
            <div>
              <span
                class="font-semibold text-base flex items-center gap-2"
              >
                Node.js
              </span>
              <p
                class="text-xs text-muted-foreground font-mono"
              >
                v
                20.0.0
              </p>
            </div>
          </div>
          <div
            class="inline-flex items-center gap-1.5 rounded-full px-3 py-1 text-xs font-semibold border transition-all duration-300 bg-success/10 text-success border-success/20"
          >
            <div
              data-testid="check-circle-icon"
            />
            <span>
              installed
            </span>
          </div>
        </div>
        <div
          class="space-y-4 mb-6 flex-1"
        >
          <p
            class="text-sm text-muted-foreground leading-relaxed"
          >
            nodeRuntimeDescription
          </p>
          <div
            class="flex items-center gap-2 p-2 rounded-lg bg-muted/50 border border-border/40 overflow-hidden"
          >
            <div
              data-testid="info-icon"
            />
            <span
              class="text-[10px] font-mono text-muted-foreground"
              title="/usr/local/bin/node"
            >
              /usr/local/bin/node
            </span>
          </div>
        </div>
        <div
          class="mt-auto space-y-3"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-normal cursor-pointer disabled:pointer-events-none disabled:opacity-50 disabled:cursor-not-allowed [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/20 focus-visible:ring-[2px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive px-4 py-2 has-[>svg]:px-3 w-full h-11 transition-all duration-300 bg-muted hover:bg-muted/80 text-foreground"
            data-size="default"
            data-slot="button"
            data-variant="default"
          >
            <div
              data-testid="refresh-icon"
            />
            reinstall
          </button>
          <button
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-normal transition-all cursor-pointer disabled:pointer-events-none disabled:opacity-50 disabled:cursor-not-allowed [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/20 focus-visible:ring-[2px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:hover:bg-accent/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 w-full text-destructive hover:bg-destructive/10 hover:text-destructive"
            data-size="sm"
            data-slot="button"
            data-variant="ghost"
          >
            <div
              data-testid="trash-icon"
            />
            uninstall
          </button>
          0
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddonSettings > Loading State > should match snapshot for loading state 1`] = `
<div>
  <div
    class="max-w-5xl mx-auto space-y-8 animate-in fade-in duration-500"
  >
    <div
      class="flex flex-col gap-1"
    >
      <h3
        class="text-xl font-semibold tracking-tight"
      >
        runtimeEnvironment
      </h3>
      <p
        class="text-sm text-muted-foreground max-w-2xl"
      >
        addonManagementDescription
      </p>
    </div>
    <div
      class="grid grid-cols-1 md:grid-cols-2 gap-6"
    >
      <div
        class="flex flex-col rounded-xl border bg-card p-6 shadow-sm"
      >
        <div
          class="flex items-start justify-between mb-6"
        >
          <div
            class="flex items-center gap-4"
          >
            <div
              class="animate-pulse bg-muted size-12 rounded-xl"
            />
            <div
              class="space-y-2"
            >
              <div
                class="animate-pulse rounded-md bg-muted h-5 w-24"
              />
              <div
                class="animate-pulse rounded-md bg-muted h-4 w-16"
              />
            </div>
          </div>
          <div
            class="animate-pulse bg-muted h-6 w-20 rounded-full"
          />
        </div>
        <div
          class="space-y-3 mb-6"
        >
          <div
            class="animate-pulse rounded-md bg-muted h-4 w-full"
          />
          <div
            class="animate-pulse rounded-md bg-muted h-4 w-2/3"
          />
        </div>
        <div
          class="animate-pulse bg-muted h-10 w-full rounded-lg"
        />
      </div>
      <div
        class="flex flex-col rounded-xl border bg-card p-6 shadow-sm"
      >
        <div
          class="flex items-start justify-between mb-6"
        >
          <div
            class="flex items-center gap-4"
          >
            <div
              class="animate-pulse bg-muted size-12 rounded-xl"
            />
            <div
              class="space-y-2"
            >
              <div
                class="animate-pulse rounded-md bg-muted h-5 w-24"
              />
              <div
                class="animate-pulse rounded-md bg-muted h-4 w-16"
              />
            </div>
          </div>
          <div
            class="animate-pulse bg-muted h-6 w-20 rounded-full"
          />
        </div>
        <div
          class="space-y-3 mb-6"
        >
          <div
            class="animate-pulse rounded-md bg-muted h-4 w-full"
          />
          <div
            class="animate-pulse rounded-md bg-muted h-4 w-2/3"
          />
        </div>
        <div
          class="animate-pulse bg-muted h-10 w-full rounded-lg"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AddonSettings > Not Installed State > should match snapshot for not installed state 1`] = `
<div>
  <div
    class="max-w-5xl mx-auto space-y-8 animate-in fade-in duration-500"
  >
    <div
      class="flex flex-col gap-1"
    >
      <h3
        class="text-xl font-semibold tracking-tight"
      >
        runtimeEnvironment
      </h3>
      <p
        class="text-sm text-muted-foreground max-w-2xl"
      >
        addonManagementDescription
      </p>
    </div>
    <div
      class="grid grid-cols-1 md:grid-cols-2 gap-6"
    >
      <div
        class="group relative flex flex-col rounded-xl border bg-card p-6 hover:shadow-md transition-all duration-300 border-border/60"
      >
        <div
          class="flex items-start justify-between mb-6"
        >
          <div
            class="flex items-center gap-4"
          >
            <div
              class="size-12 rounded-xl flex items-center justify-center border group-hover:scale-110 transition-transform duration-300 bg-brand-python/10 border-brand-python/20"
            >
              <svg
                class="size-6 text-brand-python"
                fill="currentColor"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14.25.556a3.522 3.522 0 00-1.071.108c-1.134.331-1.78.966-1.841 2.585l-.01 1.253h5.72V5.41h-8.08c-2.458 0-4.04 1.354-4.385 3.332-.387 2.227.18 3.55 1.517 4.095 1.05.428 1.487.322 2.227.322h1.258v-1.761H6.42a1.442 1.442 0 01-1.396-1.545c0-1.033.72-1.545 2.126-1.545h6.666c1.284 0 2.227.81 2.227 2.054v4.542c0 1.244-.81 2.221-2.054 2.22h-6.703c-2.083 0-3.328-1.244-3.328-3.328v-1.258H.24c0 2.458 1.354 4.04 3.332 4.385 2.227.387 3.55-.18 4.095-1.517.428-1.05.322-1.487.322-2.227v-1.258h1.761v3.136c0 1.284.81 2.227 2.054 2.227h6.666c1.406 0 2.126.512 2.126 1.545 0 1.033-.72 1.545-2.126 1.545H8.77l.001 1.258c0 1.244.81 2.221 2.054 2.22h6.703c2.083 0 3.328-1.244 3.328-3.328v-4.542c0-2.084-1.245-3.328-3.328-3.328H11.53l.01-1.253c.061-1.619.707-2.254 1.841-2.585a3.522 3.522 0 011.071-.108c1.354 0 2.585.512 2.585 1.841v1.253h1.258c2.458 0 4.04-1.354 4.385-3.332.387-2.227-.18-3.55-1.517-4.095-1.05-.428-1.487-.322-2.227-.322H14.25zM9.11 3.235a1.144 1.144 0 011.143 1.143 1.144 1.144 0 01-1.143 1.143 1.144 1.144 0 01-1.143-1.143 1.144 1.144 0 011.143-1.143zm5.78 15.132a1.144 1.144 0 011.143 1.143 1.144 1.144 0 01-1.143 1.143 1.144 1.144 0 01-1.143-1.143 1.144 1.144 0 011.143-1.143z"
                />
              </svg>
            </div>
            <div>
              <span
                class="font-semibold text-base flex items-center gap-2"
              >
                Python
                <span
                  class="text-[10px] font-normal text-muted-foreground opacity-70"
                >
                  (uv 
                  0.1.0
                  )
                </span>
              </span>
              <p
                class="text-xs text-muted-foreground font-mono"
              >
                v
                3.12.0
              </p>
            </div>
          </div>
          <div
            class="inline-flex items-center gap-1.5 rounded-full px-3 py-1 text-xs font-semibold border transition-all duration-300 bg-yellow-500/10 text-yellow-500 border-yellow-500/20"
          >
            <div
              data-testid="alert-circle-icon"
            />
            <span>
              notInstalled
            </span>
          </div>
        </div>
        <div
          class="space-y-4 mb-6 flex-1"
        >
          <p
            class="text-sm text-muted-foreground leading-relaxed"
          >
            pythonRuntimeDescription
          </p>
        </div>
        <div
          class="mt-auto space-y-3"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-normal cursor-pointer disabled:pointer-events-none disabled:opacity-50 disabled:cursor-not-allowed [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/20 focus-visible:ring-[2px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive px-4 py-2 has-[>svg]:px-3 w-full h-11 transition-all duration-300 text-white shadow-lg bg-brand-python hover:bg-brand-python/90 shadow-brand-python/20"
            data-size="default"
            data-slot="button"
            data-variant="default"
          >
            <div
              data-testid="download-icon"
            />
            install
          </button>
          0
        </div>
      </div>
      <div
        class="group relative flex flex-col rounded-xl border bg-card p-6 hover:shadow-md transition-all duration-300 border-border/60"
      >
        <div
          class="flex items-start justify-between mb-6"
        >
          <div
            class="flex items-center gap-4"
          >
            <div
              class="size-12 rounded-xl flex items-center justify-center border group-hover:scale-110 transition-transform duration-300 bg-brand-node/10 border-brand-node/20"
            >
              <svg
                class="size-6 text-brand-node"
                fill="currentColor"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 0L2.14 5.71v12.58L12 24l9.86-5.71V5.71L12 0zm7.1 17.14l-7.1 4.1-7.1-4.1V6.86l7.1-4.1 7.1 4.1v10.28zM12 5.14L5.7 8.8v6.4l6.3 3.66 6.3-3.66V8.8L12 5.14z"
                />
              </svg>
            </div>
            <div>
              <span
                class="font-semibold text-base flex items-center gap-2"
              >
                Node.js
              </span>
              <p
                class="text-xs text-muted-foreground font-mono"
              >
                v
                20.0.0
              </p>
            </div>
          </div>
          <div
            class="inline-flex items-center gap-1.5 rounded-full px-3 py-1 text-xs font-semibold border transition-all duration-300 bg-success/10 text-success border-success/20"
          >
            <div
              data-testid="check-circle-icon"
            />
            <span>
              installed
            </span>
          </div>
        </div>
        <div
          class="space-y-4 mb-6 flex-1"
        >
          <p
            class="text-sm text-muted-foreground leading-relaxed"
          >
            nodeRuntimeDescription
          </p>
          <div
            class="flex items-center gap-2 p-2 rounded-lg bg-muted/50 border border-border/40 overflow-hidden"
          >
            <div
              data-testid="info-icon"
            />
            <span
              class="text-[10px] font-mono text-muted-foreground"
              title="/usr/local/bin/node"
            >
              /usr/local/bin/node
            </span>
          </div>
        </div>
        <div
          class="mt-auto space-y-3"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-normal cursor-pointer disabled:pointer-events-none disabled:opacity-50 disabled:cursor-not-allowed [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/20 focus-visible:ring-[2px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive px-4 py-2 has-[>svg]:px-3 w-full h-11 transition-all duration-300 bg-muted hover:bg-muted/80 text-foreground"
            data-size="default"
            data-slot="button"
            data-variant="default"
          >
            <div
              data-testid="refresh-icon"
            />
            reinstall
          </button>
          <button
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-normal transition-all cursor-pointer disabled:pointer-events-none disabled:opacity-50 disabled:cursor-not-allowed [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/20 focus-visible:ring-[2px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:hover:bg-accent/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 w-full text-destructive hover:bg-destructive/10 hover:text-destructive"
            data-size="sm"
            data-slot="button"
            data-variant="ghost"
          >
            <div
              data-testid="trash-icon"
            />
            uninstall
          </button>
          0
        </div>
      </div>
    </div>
  </div>
</div>
`;
